test/ui/tests/name-resolution/circular-with-transitive-uses.stderr
error[E024]: the declarations `topmost.thing` and `topmost.indirect.thing` are circular
 --> ${TEST_FOLDER}/name-resolution/circular-with-transitive-uses.lushui:3:14
  |
3 | use indirect.thing
  |              ^^^^^
  |
 --> ${TEST_FOLDER}/name-resolution/circular-with-transitive-uses.lushui:4:40
  |
4 | module indirect of { @public use super.thing }
  |                                        ^^^^^
  |

error[E024]: the declaration `topmost.alpha` is circular
 --> ${TEST_FOLDER}/name-resolution/circular-with-transitive-uses.lushui:6:11
  |
6 | use alpha.alpha
  |           ^^^^^
  |

error[E024]: the declarations `topmost.bridge` and `topmost.omega` are circular
 --> ${TEST_FOLDER}/name-resolution/circular-with-transitive-uses.lushui:8:20
  |
8 | use omega.omega as bridge
  |                    ^^^^^^
  |
 --> ${TEST_FOLDER}/name-resolution/circular-with-transitive-uses.lushui:9:15
  |
9 | use bridge as omega
  |               ^^^^^
  |

error[E024]: the declaration `topmost.cycle` is circular
  --> ${TEST_FOLDER}/name-resolution/circular-with-transitive-uses.lushui:11:5
   |
11 | use cycle
   |     ^^^^^
   |

error: aborting due to 4 previous errors

